No recaptcha y pagina de gracias
No se pudo lograr lo del recaptcha, si se pudo implementar en el
formulario pero se probaron varios codigos para que no se pudiera
apretar el boton de enviar hasta que se llene el recaptcha en js y php
y no funcionaron, se quita lo del recaptcha y el formulario queda
normal.
Se agrego una pagina de gracias para cuando se llena el formulario,
despues de 15 segundos te redirige a la principal

--- a/css/danielcv.css
+++ b/css/danielcv.css
@@ -8,6 +8,7 @@ section{padding: 40px;}
 .azulRey{color: #02619a;}
 .negro{color: #333;}
 .blanco{color: #fff;}
+.blanco:hover{color: #fff !important;}
 .azulHover{color: #03A9F4;}
 .style-two {border: 0; height: 2px;
   background-image: linear-gradient(to right, rgba(0, 0, 0, 0), #2196F3, rgba(0, 0, 0, 0)); }
