--- a/css/danielcv.css
+++ b/css/danielcv.css
@@ -19,7 +19,16 @@ hr.style-seven:before { /* Not really supposed to work, but does */ display: blo
     content: ""; height: 30px; margin-top: -31px; border-style: solid; border-color: black;
     border-width: 0 0 1px 0; border-radius: 20px; }
 .centrarImg{margin: 0 auto; display: block;}
-a{text-decoration: none !important;}
+a{text-decoration: none !important;cursor: pointer !important;}
+
+/*estilos navbar*/
+.bg-light {background-color: #006485 !important; }
+/*.bg-light {background-color: rgba(0, 100, 133, 0.8) !important; }*/
+li.nav-item.active {background-color: #00c0ff;}
+a.nav-link{color: #fff !important; font-weight: 600;}
+a.nav-link.inicio:hover {color: #fff !important; font-size: 20px; transition: .5s; }
+a.nav-link:hover{color: #53d4ff !important;font-size: 20px;transition: .5s;}
+li.nav-item {margin-left: 96px; }
 
 /*estilos eslaider principal*/
 .slideTitle{font-size: 3rem;}
