--- a/css/danielcv.css
+++ b/css/danielcv.css
@@ -20,6 +20,7 @@ hr.style-seven:before { /* Not really supposed to work, but does */ display: blo
     border-width: 0 0 1px 0; border-radius: 20px; }
 .centrarImg{margin: 0 auto; display: block;}
 a{text-decoration: none !important;cursor: pointer !important;}
+.dos{display: none;}
 
 /*estilos navbar*/
 .bg-light {background-color: #006485 !important; }
@@ -35,9 +36,9 @@ li.nav-item {margin-left: 96px; }
 .slideTitle{font-size: 3rem;}
 .webDev{font-size: 1.5rem;}
 .watt{width: 2.4rem; margin-bottom: 0.9rem; margin-left: 0.3rem;}
-.contratame {padding: 10px 20px; font-size: 24px; text-align: center; cursor: pointer !important; outline: none;
-    color: #fff; background-color: #00c0ff; border: none; border-radius: 15px; box-shadow: 0 9px #999;
-    margin-bottom: 0.9rem; }
+.contratame {padding: 10px 20px; font-size: 24px; text-align: center; cursor:
+    pointer !important; outline: none;color: #fff !important; background-color: #00c0ff;
+    border: none; border-radius: 15px; box-shadow: 0 9px #999; margin-bottom: 0.9rem; }
 .contratame:hover {background-color: #03A9F4;border-color: #03A9F4 !important;}
 .contratame:active {background-color: #03A9F4 !important; border-color: #03A9F4 !important; box-shadow: 0 5px #666;
     transform: translateY(4px); outline: 0 !important;}
@@ -188,51 +189,121 @@ footer{background-color: #333; text-align: center; padding: 20px 0 10px 0;}
 .fab2{margin-right: 6rem;}
 
 /*media queries*/
+@media (max-width: 1024px){
+li.nav-item {margin-left: 65px; }
+.danielPhoto {width: 235px; height: 235px; margin-top: 75px !important; }
+a#controlsPortaD.carousel-control-prev {margin-right: -46px; margin-left: -46px; }
+a#controlsFreeD.carousel-control-prev {margin-right: -46px; margin-left: -46px; }
+}
+
+@media (max-width: 990px){
+.danielPhoto {margin-top: 5px !important; margin: 0 auto; display: block;
+  margin-bottom: 30px; }
+.bot2{display: block;}
+.bot1{display: none;}
+#timeline .timeline-item .timeline-content {width: 380px; margin-left: -78px; }
+#timeline .timeline-item .timeline-content.right {width: 379px; margin-right: -78px; }
+.svg-container {width: 130px; }
+.tecnologias h4 {text-align: center; font-size: 16px; margin-left: 20px; }
+a#controlsPortaD.carousel-control-prev {margin-left: -38px !important; }
+a#controlsFreeD.carousel-control-prev {margin-left: -38px !important; }
+a#controlsPortaD.carousel-control-next {margin-right: -38px !important;}
+a#controlsFreeD.carousel-control-next {margin-right: -38px !important;}
+.itemTitle {margin-top: -19px; width: 14.6rem; font-size: 1rem; padding: 0px 7px;}
+.itemPar {margin-top: 22px; }
+.pull-right {float: left; }
+.izq, .redes {margin-left: -50px; }
+div#carouselporta, div#carouselfree{width: 110%; margin-left: -34px; }
+.contacto {background-size: cover; }
+}
+
 @media screen and (max-width: 768px) {
-  #timeline {
-    margin: 30px;
-    padding: 0px;
-    width: 90%;
-  }
-  #timeline:before {
-    left: 0;
-  }
-  #timeline .timeline-item .timeline-content {
-    width: 90%;
-    float: right;
-  }
-  #timeline .timeline-item .timeline-content:before, #timeline .timeline-item .timeline-content.right:before {
-    left: 10%;
-    margin-left: -6px;
-    border-left: 0;
-    border-right: 7px solid #ee4d4d;
-  }
-  #timeline .timeline-item .timeline-icon {
-    left: 0;
-  }
+#timeline {margin: 30px; padding: 0px; width: 90%; }
+#timeline:before {left: 0; }
+#timeline .timeline-item .timeline-content {width: 90%; float: right; }
+#timeline .timeline-item .timeline-content:before,
+#timeline .timeline-item .timeline-content.right:before {left: 10%; margin-left: -6px;
+    border-left: 0; border-right: 7px solid #006384; }
+#timeline .timeline-item .timeline-icon {left: 0; } }
+
+@media (max-width: 767px){
+.navbar-light .navbar-toggler {border-color: #00c0ff; background-color: #00c0ff;}
+/*para modificar las rayitas del boton de hamburguesa*/
+.navbar-light .navbar-toggler-icon {
+    background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 32 32' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='rgba(255,255,255, 1)' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 8h24M4 16h24M4 24h24'/%3E%3C/svg%3E");
+}
+li.nav-item.active {background-color: initial; }
+li.nav-item {margin-left: 5px; border-bottom: 2px solid #01c0ff;}
+#timeline .timeline-item .timeline-content.right {width: 90%; margin-right: initial; }
+.tecnologias {background-size: cover; }
+div#carouselporta, div#carouselfree {width: 123%; margin-left: -60px; }
+a#controlsPortaD.carousel-control-prev {margin-left: -31px !important; }
+a#controlsFreeD.carousel-control-prev {margin-left: -31px !important; }
+a#controlsPortaD.carousel-control-next {margin-right: -31px !important;}
+a#controlsFreeD.carousel-control-next {margin-right: -31px !important;}
+.itemTitle {width: 11.9rem; font-size: 14px;}
+.izq, .redes {margin-left: 0px; }
+.centro{text-align: center;}
+.pull-right {float: right; }
+.fab2 {margin-right: 4.5rem; }
+.d-none {display: initial !important; }
+.slideTitle {font-size: 2.5rem; }
+.webDev {font-size: 1.3rem; }
+.fab {font-size: 1.7rem; }
+.contratame{font-size: 17px;}
+.watt {width: 1.9rem; margin-bottom: 0.7rem; }
+}
+
+@media (max-width: 600px){
+div#carouselporta, div#carouselfree {width: 100%; margin-left: 1px; }
+.itemTitle {width: 9rem;margin-top: -16px; }
+.itemPar {margin-top: 35px; font-size: 12px; }
+.slideTitle {font-size: 2rem; }
+.webDev {font-size: 1.1rem; }
+.fab {font-size: 1.5rem; }
+.contratame {font-size: 13px; }
 }
 
 @media only screen and (max-width: 480px) {
-  .pull-right {
-    float: none;
-  }
-
-  input {
-    width: 100%;
-  }
-
-  label {
-    width: 100%;
-    display: inline-block;
-    float: left;
-    clear: both;
-  }
-
-  input.btn {
-    margin: 1.5em 0 0.5em;
-  }
-
-  li small {
-    display: none;
-  }
+.pull-right {float: none; }
+input {width: 100%; }
+label {width: 100%; display: inline-block; float: left; clear: both; }
+input.btn {margin: 1.5em 0 0.5em; }
+li small {display: none; }
 }
+
+@media (max-width: 480px){
+.perfilTitle {font-size: 2rem; }
+.frasePerfil, .puedes {font-size: 1.1rem; }
+.tecnologias {background-size: contain; }
+.svg-container {width: 40% !important; }
+.itemTitle {width: 30rem; font-size: 20px; }
+.itemPar {font-size: 18px; }
+.textoHob {font-size: 17px; }
+.sfe{width: 170px;}
+.btnCV {font-size: 1.3rem !important; }
+}
+
+@media(max-width: 320px){
+.d-none {display: none !important; }
+#timeline .timeline-item .timeline-icon {margin-left: -38px; }
+#timeline:before {margin-left: -43px; }
+#timeline .timeline-item {margin-left: -30px; }
+#timeline .timeline-item {width: 250px; }
+.logoItgam {width: 9rem; }
+.svg-container {width: 70% !important; }
+a#controlsPortaD.carousel-control-prev {width: 30px;}
+a#controlsFreeD.carousel-control-prev {width: 30px;}
+a#controlsPortaD.carousel-control-next {width: 30px;}
+a#controlsFreeD.carousel-control-next {width: 30px;}
+.itemTitle {width: 14.1rem; }
+.textoHob {font-size: 19px; }
+.mobile{font-size: 12px !important;}
+.puedes {font-size: 1rem; }
+.btnCV {font-size: 1rem !important; }
+.fab {font-size: 1.3rem; }
+.watt {width: 1.6rem; }
+.fab2 {margin-right: 1.5rem; }
+.blanco {font-size: 15px; }
+
+
