--- a/css/danielcv.css
+++ b/css/danielcv.css
@@ -33,8 +33,8 @@ li.nav-item {margin-left: 96px; }
 #exper, #superp, #portafolios, #hobb, #contact{margin-top: -55px; height: 2px; width: 2px; position: absolute; }
 
 /*estilos eslaider principal*/
-.slideTitle{font-size: 3rem;}
-.webDev{font-size: 1.5rem;}
+.slideTitle{font-size: 3rem;letter-spacing: 3px;}
+.webDev{font-size: 1.5rem;letter-spacing: 2px;}
 .watt{width: 2.4rem; margin-bottom: 0.9rem; margin-left: 0.3rem;}
 .contratame {padding: 10px 20px; font-size: 24px; text-align: center; cursor:
     pointer !important; outline: none;color: #fff !important; background-color: #00c0ff;
@@ -47,7 +47,7 @@ li.nav-item {margin-left: 96px; }
 
 /*estilos del perfil*/
 .danielPhoto{border: 0;width: 265px;height: 269px; margin: 0 20px 20px 0; border-radius: 50%;}
-.perfilTitle{font-size: 2.3rem;font-weight: 600;}
+.perfilTitle{font-size: 2.3rem;font-weight: 600;letter-spacing: 2px;}
 .frasePerfil{font-size: 1.3rem;}
 .descripcion{font-size: 1.1rem;}
 .btnCV{padding: 2px 20px; font-size: 1.3rem; margin: 0 auto; display: block;}
@@ -97,6 +97,7 @@ section#experiencia{background: #5bc0de; }
   -moz-border-radius: 3px 3px 0 0;
   -ms-border-radius: 3px 3px 0 0;
   border-radius: 3px 3px 0 0;
+  letter-spacing: 1px;
 }
 #timeline .timeline-item .timeline-content:before {content: ""; position: absolute; left: 45%;
   top: 20px; width: 0; height: 0; border-top: 7px solid transparent;
@@ -113,7 +114,7 @@ i.fas.fa-briefcase {font-size: 1.5rem; margin-left: 0.8rem; margin-top: 0.8rem;
 .listaExp{margin-top: 1.1rem;}
 
 /*estilos tecnologias*/
-.tecnologias{background-image: url("../img/tecnologias4.png");}
+.tecnologias{background-image: url("../img/tecnologias4.png");padding: 20px;}
 .circle {stroke: #00c0ff; }
 circle.border {stroke: white; }
 text.timer {fill: white; }
